Patch Hadoop Client API jar to avoid deprecated Java Security API
Uses ASM to patch UserGroupInformation class at build time and stores
it in a version-specific directory of a newly created multi-release
jar, where it will be picked up by Java 23+.